; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_hv_bi_4t_8w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_hv_bi_4t_8w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32)* @hevc_hv_bi_4t_8w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hv_bi_4t_8w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32* %6, i32* %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  store i32* %0, i32** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32* %4, i32** %14, align 8
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32 %8, i32* %18, align 4
  %19 = load i32, i32* %18, align 4
  %20 = icmp eq i32 2, %19
  br i1 %20, label %21, label %31

21:                                               ; preds = %9
  %22 = load i32*, i32** %10, align 8
  %23 = load i32, i32* %11, align 4
  %24 = load i32*, i32** %12, align 8
  %25 = load i32, i32* %13, align 4
  %26 = load i32*, i32** %14, align 8
  %27 = load i32, i32* %15, align 4
  %28 = load i32*, i32** %16, align 8
  %29 = load i32*, i32** %17, align 8
  %30 = call i32 @hevc_hv_bi_4t_8x2_msa(i32* %22, i32 %23, i32* %24, i32 %25, i32* %26, i32 %27, i32* %28, i32* %29)
  br label %70

31:                                               ; preds = %9
  %32 = load i32, i32* %18, align 4
  %33 = icmp eq i32 4, %32
  br i1 %33, label %34, label %44

34:                                               ; preds = %31
  %35 = load i32*, i32** %10, align 8
  %36 = load i32, i32* %11, align 4
  %37 = load i32*, i32** %12, align 8
  %38 = load i32, i32* %13, align 4
  %39 = load i32*, i32** %14, align 8
  %40 = load i32, i32* %15, align 4
  %41 = load i32*, i32** %16, align 8
  %42 = load i32*, i32** %17, align 8
  %43 = call i32 @hevc_hv_bi_4t_8multx4_msa(i32* %35, i32 %36, i32* %37, i32 %38, i32* %39, i32 %40, i32* %41, i32* %42, i32 1)
  br label %69

44:                                               ; preds = %31
  %45 = load i32, i32* %18, align 4
  %46 = icmp eq i32 6, %45
  br i1 %46, label %47, label %57

47:                                               ; preds = %44
  %48 = load i32*, i32** %10, align 8
  %49 = load i32, i32* %11, align 4
  %50 = load i32*, i32** %12, align 8
  %51 = load i32, i32* %13, align 4
  %52 = load i32*, i32** %14, align 8
  %53 = load i32, i32* %15, align 4
  %54 = load i32*, i32** %16, align 8
  %55 = load i32*, i32** %17, align 8
  %56 = call i32 @hevc_hv_bi_4t_8x6_msa(i32* %48, i32 %49, i32* %50, i32 %51, i32* %52, i32 %53, i32* %54, i32* %55)
  br label %68

57:                                               ; preds = %44
  %58 = load i32*, i32** %10, align 8
  %59 = load i32, i32* %11, align 4
  %60 = load i32*, i32** %12, align 8
  %61 = load i32, i32* %13, align 4
  %62 = load i32*, i32** %14, align 8
  %63 = load i32, i32* %15, align 4
  %64 = load i32*, i32** %16, align 8
  %65 = load i32*, i32** %17, align 8
  %66 = load i32, i32* %18, align 4
  %67 = call i32 @hevc_hv_bi_4t_8multx4mult_msa(i32* %58, i32 %59, i32* %60, i32 %61, i32* %62, i32 %63, i32* %64, i32* %65, i32 %66, i32 8)
  br label %68

68:                                               ; preds = %57, %47
  br label %69

69:                                               ; preds = %68, %34
  br label %70

70:                                               ; preds = %69, %21
  ret void
}

declare dso_local i32 @hevc_hv_bi_4t_8x2_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @hevc_hv_bi_4t_8multx4_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32) #1

declare dso_local i32 @hevc_hv_bi_4t_8x6_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @hevc_hv_bi_4t_8multx4mult_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
